[package]
name = "clickhouse-data-type"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "ClickHouse Data Types"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-data-type"
keywords = []
categories = []
readme = "README.md"

[dependencies]
