[package]
name = "clickhouse-data-type"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "ClickHouse Data Types"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-data-type"
keywords = []
categories = []
readme = "README.md"

[dependencies]
pest = { version = "2.1", default-features = false }
pest_derive = { version = "2.1", default-features = false }

thiserror = { version = "1.0", default-features = false }

chrono-tz = { version = "0.5", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0" }
