[package]
name = "clickhouse-data-value"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "ClickHouse Data Values"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-data-value"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = [ "with-all" ]

[features]
default = [ "with-all" ]

with-all = [ "with-date", "with-datetime", "with-datetime64" ]
with-date = [ "chrono" ]
with-datetime = [ "chrono" ]
with-datetime64 = [ "chrono" ]

[dependencies]
pest = { version = "2.1", default-features = false }
pest_derive = { version = "2.1", default-features = false }

serde = { version = "1.0", default-features = false, features = [ "derive" ] }
thiserror = { version = "1.0", default-features = false }

chrono = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
