[package]
name = "clickhouse-data-value"
version = "0.3.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "ClickHouse Data Values"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-data-value"
keywords = []
categories = []
readme = "README.md"

[dependencies]
pest = { version = "2.5", default-features = false, features = ["std"] }
pest_derive = { version = "2.5", default-features = false, features = ["std"] }

serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "1", default-features = false }

chrono = { version = "0.4", default-features = false }

[dev-dependencies]
serde_json = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
