[package]
name = "clickhouse-http-client"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "ClickHouse HTTP Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-http-client"
keywords = []
categories = []
readme = "README.md"

[features]
# default = ["_integration_tests"]
_integration_tests = []

[dependencies]
isahc = { version = "1.3", default-features = false, features = ["text-decoding"] }
url = { version = "2.2", default-features = false }

thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.4", features = ["macros", "rt"]}
env_logger = { version = "0.8" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["_integration_tests"],
]
