[package]
name = "clickhouse-http-client"
version = "0.3.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "ClickHouse HTTP Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-http-client"
keywords = []
categories = []
readme = "README.md"

[features]
default = []

with-format-all = ["with-format-tsv", "with-format-json"]

with-format-tsv = ["clickhouse-format/with-tsv"]
with-format-json = ["clickhouse-format/with-json"]

_integration_tests = ["with-format-json"]

[dependencies]
clickhouse-format = { version = "0.3", default-features = false, path = "../clickhouse-format" }

isahc = { version = "1", default-features = false, features = [
    "text-decoding",
] }
url = { version = "2", default-features = false }
thiserror = { version = "1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
env_logger = { version = "0.10" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4" }

clickhouse-data-value = { version = "0.3", default-features = false, path = "../clickhouse-data-value" }

[package.metadata.cargo-all-features]
skip_feature_sets = [["_integration_tests"]]
