[package]
name = "clickhouse-postgres-client"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "ClickHouse Postgres Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/clickhouse-postgres-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = ["all-types", "runtime-tokio", "tls-rustls-aws-lc-rs", "num-bigint"]

[features]
default = []

# types
all-types = ["chrono", "bigdecimal", "uuid"]
chrono = ["sqlx/chrono", "clickhouse-data-value"]
bigdecimal = ["sqlx/bigdecimal"]
uuid = ["sqlx/uuid"]

# runtimes
runtime-tokio = ["sqlx/runtime-tokio"]

# tls
tls-rustls-aws-lc-rs = ["sqlx/tls-rustls-aws-lc-rs"]

#
_integration_tests = [
    "all-types",
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "num-bigint",
]

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres"] }
sqlx-clickhouse-ext = { version = "0.2", default-features = false, path = "../sqlx-clickhouse-ext" }


url = { version = "2", default-features = false }

num-bigint = { version = "0.4", default-features = false, features = [
    "std",
], optional = true }

clickhouse-data-value = { version = "0.3", default-features = false, optional = true, path = "../clickhouse-data-value" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono04 = { version = "0.4", package = "chrono" }
