[package]
name = "sqlx-clickhouse-ext"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "SQLx ClickHouse Extension"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/clickhouse-rs"
homepage = "https://github.com/bk-rs/clickhouse-rs"
documentation = "https://docs.rs/sqlx-clickhouse-ext"
keywords = []
categories = []
readme = "README.md"

[dependencies]
sqlx-core = { version = "0.8", default-features = false }
futures-core = { version = "0.3", default-features = false }
