[package]
name = "clickhouse-demo-postgres-client"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "conn"
path = "src/conn.rs"

[[bin]]
name = "pool"
path = "src/pool.rs"

[dependencies]
clickhouse-postgres-client = { version = "0.1", default-features = false, features = ["all-types", "runtime-tokio-native-tls"], path = "../../clickhouse-postgres-client" }

tokio = { version = "1", default-features = false, features = ["macros"] }
