[package]
name = "clickhouse-demo-postgres-client"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "clickhouse-demo-postgres-client-conn"
path = "src/conn.rs"

[[bin]]
name = "clickhouse-demo-postgres-client-pool"
path = "src/pool.rs"

[dependencies]
clickhouse-postgres-client = { default-features = false, features = ["all-types", "runtime-tokio-native-tls"], path = "../../clickhouse-postgres-client" }

tokio = { version = "1", default-features = false, features = ["macros"] }
